fixed alignment of week days

--- a/src/SASS/calendar.scss
+++ b/src/SASS/calendar.scss
@@ -5,6 +5,7 @@
   width: 100vw;
   transition: all 0.2s $trans-primary;
   margin-top: 2rem;
+  background-color: $color-light;
   @media screen and (max-width: 624px) {
     position: sticky;
     top: 0rem;
@@ -19,9 +20,10 @@
     margin-right: 2rem;
     margin-left: 2rem;
     color: $color-text;
-    width: 12rem;
+    width: 16rem;
     @media screen and (max-width: 624px) {
-      width: 9rem;
+      width: 13.5rem;
+      margin: 0;
     }
   }
   &_arrow {
@@ -39,6 +41,8 @@
     }
     &:active {
       transform: scale(1.2);
+      border: none;
+      outline: none;
     }
   }
 }
@@ -100,6 +104,33 @@
     align-items: center;
   }
   &_day {
+    width: 10rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    @media screen and (max-width: 1205px) {
+      width: 9rem;
+    }
+    @media screen and (max-width: 1092px) {
+      width: 8.3rem;
+    }
+
+    @media screen and (max-width: 1034px) {
+      width: 8rem;
+    }
+    @media screen and (max-width: 974px) {
+      width: 7rem;
+    }
+    @media screen and (max-width: 887px) {
+      width: 6.4rem;
+    }
+    @media screen and (max-width: 813px) {
+      width: 5.6rem;
+    }
+    @media screen and (max-width: 730px) {
+      width: 4.8rem;
+    }
     .wordDate {
       text-align: center;
       font-family: $font-primary;
@@ -128,6 +159,7 @@
   display: flex;
   justify-content: space-around;
   margin-bottom: 0.5rem;
+  margin-top: 1rem;
   &_col {
     padding: 0 3rem;
     display: flex;
@@ -156,19 +188,30 @@
     font-size: 1.4rem;
     text-align: center;
     background-color: $color-dark;
+    box-shadow: 0 2px 13px rgba($color-dark, 0.5);
     padding: 1.5rem;
     color: $color-light;
     width: 7.5rem;
-    border: none;
     margin: 0.3rem 1.2rem;
     transition: all 0.4s $trans-primary;
     border-radius: 0.4rem;
+    border: none;
+    outline: none;
+    &:active {
+      border: none;
+      outline: none;
+    }
     &_selected {
       background-color: $color-primary;
+      box-shadow: 0 2px 20px rgba($color-primary, 0.68);
+      &:hover {
+        cursor: pointer;
+      }
     }
 
     &:hover {
       cursor: pointer;
+      box-shadow: 0 2px 13px rgba($color-dark, 0.9);
     }
     @media screen and (max-width: 1205px) {
       padding: 1rem;
